[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lasers"
version = "0.1.0"
description = "A Python package for laser operations"
requires-python = ">=3.8"
dependencies = ["scipy>=1.8"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where=["src"]
